# ShortAttentionSpan

./: .gitignore  .pdm-python  Dockerfile  infer.py  infer2.py  main.py  plot_loss.py  pyproject.toml  pyrightconfig.json  requirements.txt  simple_test.py  train.py  untrained.py
model/: attention.py  config.py  dataset.py  feedforward.py  gelu.py  llm.py  norm.py  transformer.py
tests/: test_gelu.py  test_norm.py
